--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,15 @@
     Welcome to {{title}}!
   </h1>
 
-  <ng-container *ngFor="let item of data">
-    <ng-template appHost></ng-template>
-  </ng-container>
+  <table>
+    <thead>
+      <td *ngFor="let header of headers">{{header.displayTitle}}</td>
+    </thead>
+    <tr *ngFor="let item of tableData">
+      <td *ngFor="let header of headers">
+        <ng-template appHost></ng-template>
+      </td>
+    </tr>
+  </table>
 
 </div>
